@@ -1,3 +1,7 @@
+2012-02-07  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Added new SNMP alert fields and macros.
+
 2012-02-06 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* util/pandora_xml_stress.pl: Fixed a problem with new version of perl
